--- a/index.html
+++ b/index.html
@@ -267,6 +267,55 @@
 				</ul>
 			</div>
 		</section>
+		<section class="clients">
+			<div class="wrap">
+				<h2 class="primary-header">Постоянные клиенты</h2>
+				<ul class="clients-list list flex-container">
+					<li class="clients-list__item">
+						<a href="#" class="clients-list__link link">
+							<svg class="clients-list__icon" width="44" height="49">
+								<use href="images/sprite.svg#icon-logo-1"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="clients-list__item">
+						<a href="#" class="clients-list__link link">
+							<svg class="clients-list__icon" width="44" height="49">
+								<use href="images/sprite.svg#icon-logo-2"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="clients-list__item">
+						<a href="#" class="clients-list__link link">
+							<svg class="clients-list__icon" width="44" height="49">
+								<use href="images/sprite.svg#icon-logo-3"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="clients-list__item">
+						<a href="#" class="clients-list__link link">
+							<svg class="clients-list__icon" width="44" height="49">
+								<use href="images/sprite.svg#icon-logo-4"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="clients-list__item">
+						<a href="#" class="clients-list__link link">
+							<svg class="clients-list__icon" width="44" height="49">
+								<use href="images/sprite.svg#icon-logo-5"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="clients-list__item">
+						<a href="#" class="clients-list__link link">
+							<svg class="clients-list__icon" width="44" height="49">
+								<use href="images/sprite.svg#icon-logo-6"></use>
+							</svg>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</section>
 	</main>
 	<footer>
 		<div class="wrap">
