--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,18 @@
 			</nav>
 			<ul class="header-contacts list">
 				<li class="header-contacts__item">
-					<a href="mailto:info@devstudio.com" class="header-contacts__link link">info@devstudio.com</a>
+					<a href="mailto:info@devstudio.com" class="header-contacts__link link">
+						<svg class="header-contacts__icon" width="16px" height="12px">
+							<use href="images/sprite.svg#icon-envelope"></use>
+						</svg>
+					info@devstudio.com</a>
 				</li>
 				<li class="header-contacts__item">
-					<a href="tel:+380961111111" class="header-contacts__link link"> +38 096 111 11 11</a>
+					<a href="tel:+380961111111" class="header-contacts__link link">
+						<svg class="header-contacts__icon" width="10" height="16">
+							<use href="images/sprite.svg#icon-smartphone"></use>
+						</svg>
+					 +38 096 111 11 11</a>
 				</li>
 			</ul>
 		</div>
@@ -144,21 +152,56 @@
 		</section>
 	</main>
 	<footer>
-		<div class="wrap">
-			<a href="index.html" class="logo logo-bottom link"><span class="logo__first-part">Web</span>Studio</a>
-			<address>
-				<ul class="address-list list">
-					<li class="address-list__item">
-						<a href="https://goo.gl/maps/cHCvmtt4Cjto5mqM6" class="address-list__link link addr" target="_blank" rel="noopener noreffer">г. Киев, пр-т Леси Украинки, 26</a>
+		<div class="wrap footer-container">
+			<div class="footer__left-part">
+				<a href="index.html" class="logo logo-bottom link"><span class="logo__first-part">Web</span>Studio</a>
+				<address>
+					<ul class="address-list list">
+						<li class="address-list__item">
+							<a href="https://goo.gl/maps/cHCvmtt4Cjto5mqM6" class="address-list__link link addr" target="_blank" rel="noopener noreffer">г. Киев, пр-т Леси Украинки, 26</a>
+						</li>
+						<li class="address-list__item">
+							<a href="mailto:info@devstudio.com" class="address-list__link link">info@devstudio.com</a>
+						</li>
+						<li class="address-list__item">
+							<a href="tel:+380961111111" class="address-list__link link"> +38 096 111 11 11</a>
+						</li>
+					</ul>
+				</address>
+			</div>
+			<div class="footer__right-part">
+				<h4 class="right-part__header">Присоединяйтесь</h4>
+				<ul class="footer__social-container list">
+					<li class="social-container__item">
+						<a href="#" class="social-container__link link">
+							<svg class="social-container__icon" width="20" height="20">
+								<use href="images/sprite.svg#icon-instagram"></use>
+							</svg>
+						</a>
 					</li>
-					<li class="address-list__item">
-						<a href="mailto:info@devstudio.com" class="address-list__link link">info@devstudio.com</a>
+					<li class="social-container__item">
+						<a href="#" class="social-container__link link">
+							<svg class="social-container__icon" width="20" height="20">
+								<use href="images/sprite.svg#icon-twitter"></use>
+							</svg>
+						</a>
 					</li>
-					<li class="address-list__item">
-						<a href="tel:+380961111111" class="address-list__link link"> +38 096 111 11 11</a>
+					<li class="social-container__item">
+						<a href="#" class="social-container__link link">
+							<svg class="social-container__icon" width="20" height="20">
+								<use href="images/sprite.svg#icon-facebook"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="social-container__item">
+						<a href="#" class="social-container__link link">
+							<svg class="social-container__icon" width="20" height="20">
+								<use href="images/sprite.svg#icon-linkedin"></use>
+							</svg>
+						</a>
 					</li>
 				</ul>
-			</address>
+			</div>
 		</div>
 	</footer>
 </body>
